--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,5 +9,5 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v1
-      -name: Build the docker-compose stack
-        run: docker-compose -f docker-compose.yml up --build --abort-on-container-exit --build
+      - name: Build the docker-compose stack
+        run: docker-compose -f docker-compose.yml up --abort-on-container-exit --build
